fix the issue with info rows not fitting on the screen

--- a/src/style/CountryPage.scss
+++ b/src/style/CountryPage.scss
@@ -38,9 +38,10 @@
   &__info {
     line-height: 28px;
     @media only screen and (min-width: 1200px) {
-      height: 140px;
+      // height: 140px;
       column-count: 2;
       column-gap: 0px;
+      margin-bottom: 20px;
     }
   }
 
